// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field overview 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Joshua_Dach@yahoo.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Cassidy.Brekke@gmail.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Ignacio19@gmail.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Marcia94@yahoo.com"
    />
  </div>
</DocumentFragment>
`;

exports[`Field overview 5 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <label
      class="css-knfhfe"
      for="email"
    >
      Email
    </label>
    <input
      class="css-iyqgnx"
      id="email"
      name="email"
      value="Ronny_Spinka@gmail.com"
    />
  </div>
</DocumentFragment>
`;
